fix: consertar botão de exclusão

--- a/src/app/components/game-list/game-list.component.html
+++ b/src/app/components/game-list/game-list.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="table-container" *ngIf="games.length > 0">
-    <p-table [value]="games" [responsive]="true" styleClass="p-datatable-sm">
+    <p-table [value]="games" styleClass="p-datatable-sm">
       <ng-template pTemplate="header">
         <tr>
           <th>ID</th>
