fix: consertando botao e conexao com dados

--- a/src/app/components/game-insert/game-insert.component.html
+++ b/src/app/components/game-insert/game-insert.component.html
@@ -12,7 +12,7 @@
         [suggestions]="filteredGames"
         (completeMethod)="searchGames($event)"
         (onSelect)="onGameSelect($event)"
-        field="label"
+        field="titulo"
         placeholder="Digite o título do jogo"
         [minLength]="3"
         [dropdown]="true"
