--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -76,7 +76,11 @@ body {
 }
 
 .content {
-  min-height: calc(100vh - 200px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 70vh;
   padding: 2rem 0.5rem;
   background: #0f0f0f;
   color: #e0e0e0;
