--- a/src/app/components/mygamelist-list/mygamelist-list.component.html
+++ b/src/app/components/mygamelist-list/mygamelist-list.component.html
@@ -1,5 +1,8 @@
 <div>
- <p-table [value]="jogos" [paginator]="false" [rows]="10">
+  <div style="display: flex; justify-content: flex-end; margin-bottom: 1rem;">
+    <a pButton label="Adicionar Jogo" icon="pi pi-plus" [routerLink]="['/novo']" styleClass="p-button-success"></a>
+  </div>
+  <p-table [value]="jogos" [paginator]="false" [rows]="10">
     <ng-template pTemplate="header">
       <tr>
         <th>ID</th>
@@ -31,9 +34,6 @@
         </td>
       </tr>
     </ng-template>
-    
   </p-table>
-
   <p-confirmDialog></p-confirmDialog>
-  
 </div>
